--- a/index.html
+++ b/index.html
@@ -1,7 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+
+	<title>Invite Aero</title>
+
+	<meta name="robots" content="index, follow" />
+
+	<meta charset="utf-8" />
+	<meta name="mobile-web-app-capable" content="no" />
+
+	<meta name="theme-color" content="#bfcbf5" />
+
+	<link rel="icon" type="image/png"
+		href="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+
+	<meta property="og:site_name" content="Aero | Intuitive community management" />
+
+	<meta name="twitter:url" content="https://get.aero.bot/" />
+	<meta property="og:url" content="https://get.aero.bot/" />
+	<meta property="og:see_also" content="https://get.aero.bot/" />
+
+	<meta itemprop="name" content="Invite Aero" />
+	<meta name="twitter:title" content="Invite Aero" />
+	<meta property="og:title" content="Invite Aero" />
+
+	<meta itemprop="image"
+		content="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+	<meta name="twitter:image"
+		content="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+	<meta property="og:image"
+		content="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+
+	<meta name="description" content="Invite Aero now to spice up and protect your server." />
+	<meta name="twitter:description" content="Invite Aero now to spice up and protect your server." />
+	<meta property="og:description" content="Invite Aero now to spice up and protect your server." />
+
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Expletus+Sans:wght@600&display=swap">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div class="container">
+		<div class="item">
+			<img class="logo" src="icon.svg">
+			<h1 class="logo">Aero</h1>
+			<p id="tagline">Intuitive community management.</p>
+			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://aero.bot/terms">Terms of Service</a>
+					and <a href="https://aero.bot/privacy">Privacy Policy</a>.</em></p>
+		</div>
+		<div class="item">
+			<a class="button"
+				href="https://discord.com/oauth2/authorize?client_id=432129282710700033&scope=bot+applications.commands&permissions=8">
+				Invite Aero
+			</a>
+			<a class="button button-outline"
+				href="https://discord.com/oauth2/authorize?client_id=612228762330726411&scope=bot+applications.commands&permissions=8">
+				Invite Aero Staging
+			</a>
+		</div>
+	</div>
+	<style>
+		html,
+		body,
+		.container {
+			height: 100%;
+			background-color: #eceff9;
+			color: #314270;
+			font-family: Roboto, sans-serif;
+		}
+
+		a {
+			color: #6279B3;
+		}
+
+		a:hover {
+			color: #314270;
+		}
+
+		img,
+		h1 {
+			display: inline-block;
+			vertical-align: middle;
+			margin-right: 1rem;
+			font-family: 'Expletus Sans', cursive;
+		}
+
+		img.logo {
+			height: 1.2em;
+			font-size: 6em;
+			line-height: 1em;
+			padding-right: .3em;
+			transform: translateY(-0.2em);
+		}
+
+		.container {
+			display: flex;
+			text-align: center;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+		}
+
+		.button {
+			height: 4.4rem;
+			font-size: 1.3rem;
+			line-height: 4.4rem;
+			background-color: #314270;
+			border-color: #314270;
+		}
+
+		.button:hover {
+			background-color: #6279B3;
+			border-color: #6279B3;
+		}
+
+		.button.button-outline {
+			color: #314270;
+		}
+
+		.button.button-outline:hover {
+			color: #748ed2;
+			border-color: #748ed2;
+		}
+
+		h1 {
+			font-size: 6em;
+			line-height: 1em;
+		}
+
+		#tagline {
+			font-size: 2em;
+			margin-bottom: .5rem;
+		}
+
+		#disclaimer {
+			font-size: 1em;
+		}
+
+		::selection {
+			background: #6279B3;
+			color: #eceff9;
+		}
+
+		.logo {
+			transform: translateX(-0.5em);
+		}
+	</style>
 </body>
+
 </html>
