--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>Invite Aero</title>
+	<title>Muzik</title>
 
 	<meta name="robots" content="index, follow" />
 
@@ -13,7 +13,7 @@
 	<meta name="theme-color" content="#bfcbf5" />
 
 	<link rel="icon" type="image/png"
-		href="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+		href="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
 
 	<meta property="og:site_name" content="Aero | Intuitive community management" />
 
@@ -26,11 +26,11 @@
 	<meta property="og:title" content="Invite Aero" />
 
 	<meta itemprop="image"
-		content="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
 	<meta name="twitter:image"
-		content="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
 	<meta property="og:image"
-		content="https://cdn.discordapp.com/app-icons/432129282710700033/ff22e5c985a384b8615752360b3d2fde.png" />
+		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
 
 	<meta name="description" content="Invite Aero now to spice up and protect your server." />
 	<meta name="twitter:description" content="Invite Aero now to spice up and protect your server." />
