--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 	<div class="container">
 		<div class="item">
-			<img class="logo" src="icon test.svg">
+			<img class="logo" src="icon.svg">
 			<h1 class="logo">Aero</h1>
 			<p id="tagline">Intuitive community management.</p>
 			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://aero.bot/terms">Terms of Service</a>
