--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="icon" type="image/png"
 		href="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
 
-	<meta property="og:site_name" content="Aero | Intuitive community management" />
+	<meta property="og:site_name" content="Muzik | Intuitive community management" />
 
 	<meta name="twitter:url" content="https://get.aero.bot/" />
 	<meta property="og:url" content="https://get.aero.bot/" />
