--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
 	<div class="container">
 		<div class="item">
 			<img class="logo" src="icon.svg">
-			<h1 class="logo">Aero</h1>
-			<p id="tagline">Intuitive community management.</p>
-			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://aero.bot/terms">Terms of Service</a>
-					and <a href="https://aero.bot/privacy">Privacy Policy</a>.</em></p>
+			<h1 class="logo">Muzik</h1>
+			<p id="tagline">Just a music bot.</p>
+			<p id="disclaimer"><em>By inviting, you agree to our <a href="">Terms of Service</a>
+					and <a href="">Privacy Policy</a>.</em></p>
 		</div>
 		<div class="item">
 			<a class="button"
-				href="https://discord.com/oauth2/authorize?client_id=432129282710700033&scope=bot+applications.commands&permissions=8">
+				href="https://discord.com/oauth2/authorize?client_id&scope=bot+applications.commands&permissions=8">
 				Invite Aero
 			</a>
 			<a class="button button-outline"
-				href="https://discord.com/oauth2/authorize?client_id=612228762330726411&scope=bot+applications.commands&permissions=8">
+				href="https://discord.com/oauth2/authorize?client_id=&scope=bot+applications.commands&permissions=8">
 				Invite Aero Staging
 			</a>
 		</div>
