--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 			<img class="logo" src="icon.svg">
 			<h1 class="logo">Muzik</h1>
 			<p id="tagline">Just a music bot.</p>
-			<p id="disclaimer"><em>By inviting, you agree to our <a href="">Terms of Service</a>
-					and <a href="">Privacy Policy</a>.</em></p>
+			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://mentah.github.io/">Terms of Service</a>
+					and <a href="https://mentah.github.io/">Privacy Policy</a>.</em></p>
 		</div>
 		<div class="item">
 			<a class="button"
-				href="https://discord.com/oauth2/authorize?client_id&scope=bot+applications.commands&permissions=8">
+				href="https://discord.com/oauth2/authorize?client_id=0&scope=bot+applications.commands&permissions=8">
 				Invite Aero
 			</a>
 			<a class="button button-outline"
-				href="https://discord.com/oauth2/authorize?client_id=&scope=bot+applications.commands&permissions=8">
+				href="https://discord.com/oauth2/authorize?client_id=0&scope=bot+applications.commands&permissions=8">
 				Invite Aero Staging
 			</a>
 		</div>
