--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 	<meta property="og:url" content="https://get.aero.bot/" />
 	<meta property="og:see_also" content="https://get.aero.bot/" />
 
-	<meta itemprop="name" content="Invite Aero" />
-	<meta name="twitter:title" content="Invite Aero" />
-	<meta property="og:title" content="Invite Aero" />
+	<meta itemprop="name" content="Invite Muzik" />
+	<meta name="twitter:title" content="Invite Muzik" />
+	<meta property="og:title" content="Invite Muzik" />
 
 	<meta itemprop="image"
 		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
@@ -55,11 +55,11 @@
 		<div class="item">
 			<a class="button"
 				href="https://discord.com/oauth2/authorize?client_id=0&scope=bot+applications.commands&permissions=8">
-				Invite Aero
+				Invite Muzik
 			</a>
 			<a class="button button-outline"
 				href="https://discord.com/oauth2/authorize?client_id=0&scope=bot+applications.commands&permissions=8">
-				Invite Aero Staging
+				Invite Muzik Testing
 			</a>
 		</div>
 	</div>
