--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 			<img class="logo" src="icon.svg">
 			<h1 class="logo">Muzik</h1>
 			<p id="tagline">Just a music bot.</p>
-			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://mentah.github.io/">Terms of Service</a>
+			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://mentah.github.io/">Terms of
+						Service</a>
 					and <a href="https://mentah.github.io/">Privacy Policy</a>.</em></p>
 		</div>
 		<div class="item">
