--- a/index.html
+++ b/index.html
@@ -1,156 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-	<title>Muzik</title>
-
-	<meta name="robots" content="index, follow" />
-
-	<meta charset="utf-8" />
-	<meta name="mobile-web-app-capable" content="no" />
-
-	<meta name="theme-color" content="#bfcbf5" />
-
-	<link rel="icon" type="image/png"
-		href="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
-
-	<meta property="og:site_name" content="Muzik | Intuitive community management" />
-
-	<meta name="twitter:url" content="https://get.aero.bot/" />
-	<meta property="og:url" content="https://get.aero.bot/" />
-	<meta property="og:see_also" content="https://get.aero.bot/" />
-
-	<meta itemprop="name" content="Invite Muzik" />
-	<meta name="twitter:title" content="Invite Muzik" />
-	<meta property="og:title" content="Invite Muzik" />
-
-	<meta itemprop="image"
-		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
-	<meta name="twitter:image"
-		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
-	<meta property="og:image"
-		content="https://cdn.discordapp.com/attachments/895128870573989948/896413463776219196/icon_test_1.png" />
-
-	<meta name="description" content="Invite Aero now to spice up and protect your server." />
-	<meta name="twitter:description" content="Invite Aero now to spice up and protect your server." />
-	<meta property="og:description" content="Invite Aero now to spice up and protect your server." />
-
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Expletus+Sans:wght@600&display=swap">
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.css">
-</head>
-
-<body>
-	<div class="container">
-		<div class="item">
-			<img class="logo" src="icon.svg">
-			<h1 class="logo">Muzik</h1>
-			<p id="tagline">Just a music bot.</p>
-			<p id="disclaimer"><em>By inviting, you agree to our <a href="https://mentah.github.io/">Terms of
-						Service</a>
-					and <a href="https://mentah.github.io/">Privacy Policy</a>.</em></p>
-		</div>
-		<div class="item">
-			<a class="button"
-				href="https://discord.com/oauth2/authorize?client_id=0&scope=bot+applications.commands&permissions=8">
-				Invite Muzik
-			</a>
-			<a class="button button-outline"
-				href="https://discord.com/oauth2/authorize?client_id=0&scope=bot+applications.commands&permissions=8">
-				Invite Muzik Testing
-			</a>
-		</div>
-	</div>
-	<style>
-		html,
-		body,
-		.container {
-			height: 100%;
-			background-color: #eceff9;
-			color: #314270;
-			font-family: Roboto, sans-serif;
-		}
-
-		a {
-			color: #6279B3;
-		}
-
-		a:hover {
-			color: #314270;
-		}
-
-		img,
-		h1 {
-			display: inline-block;
-			vertical-align: middle;
-			margin-right: 1rem;
-			font-family: 'Expletus Sans', cursive;
-		}
-
-		img.logo {
-			height: 1.2em;
-			font-size: 6em;
-			line-height: 1em;
-			padding-right: .3em;
-			transform: translateY(-0.2em);
-		}
-
-		.container {
-			display: flex;
-			text-align: center;
-			align-items: center;
-			justify-content: center;
-			flex-direction: column;
-		}
-
-		.button {
-			height: 4.4rem;
-			font-size: 1.3rem;
-			line-height: 4.4rem;
-			background-color: #314270;
-			border-color: #314270;
-		}
-
-		.button:hover {
-			background-color: #6279B3;
-			border-color: #6279B3;
-		}
-
-		.button.button-outline {
-			color: #314270;
-		}
-
-		.button.button-outline:hover {
-			color: #748ed2;
-			border-color: #748ed2;
-		}
-
-		h1 {
-			font-size: 6em;
-			line-height: 1em;
-		}
-
-		#tagline {
-			font-size: 2em;
-			margin-bottom: .5rem;
-		}
-
-		#disclaimer {
-			font-size: 1em;
-		}
-
-		::selection {
-			background: #6279B3;
-			color: #eceff9;
-		}
-
-		.logo {
-			transform: translateX(-0.5em);
-		}
-	</style>
-</body>
-
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://example.com/</title>
+<meta http-equiv="refresh" content="0; URL=https://example.com/">
+<link rel="canonical" href="https://example.com/">
