--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
-<link rel="canonical" href="https://example.com/">
+<title>Redirecting..</title>
+<meta http-equiv="refresh" content="0; URL=https://www.dailymotion.com/video/x8n99me/">
+<link rel="canonical" href="https://www.dailymotion.com/video/x8n99me/">
