--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting..</title>
+<title>Redirecting to site</title>
 <meta http-equiv="refresh" content="0; URL=https://www.dailymotion.com/video/x8n99me/">
 <link rel="canonical" href="https://www.dailymotion.com/video/x8n99me/">
